--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "path": "^0.12.7",
     "heatmap.js": "^2.0.2",
     "leaflet": "^0.7.7",
-    "google-maps": "^3.2.1"
+    "google-maps": "^3.2.1",
+    "sockjs": "^0.3.17",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "webpack": "^1.13.1",
