--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "async": "^2.0.0-rc.5",
     "http": "0.0.0",
     "path": "^0.12.7",
-    "heatmap.js": "^2.0.2",
     "leaflet": "^0.7.7",
     "google-maps": "^3.2.1",
     "sockjs": "^0.3.17",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "leaflet.heat": "git+ssh://git@github.com:Leaflet/Leaflet.heat.git#v0.2.0"
   },
   "devDependencies": {
     "webpack": "^1.13.1",
