--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "google-maps": "^3.2.1",
     "sockjs": "^0.3.17",
     "stompjs": "^2.3.3",
-    "leaflet.heat": "git+ssh://git@github.com:Leaflet/Leaflet.heat.git#v0.2.0"
+    "leaflet.heat": "git+ssh://git@github.com:Leaflet/Leaflet.heat.git#v0.2.0",
+    "vis": "^4.16.1"
   },
   "devDependencies": {
     "webpack": "^1.13.1",
